dig-src/main/default/objects/Geary_Run__c/Geary_Run__c.object-meta.xml
<CustomObject>
    <label>Geary Run</label>
    <pluralLabel>Geary Runs</pluralLabel>
    <nameField>
        <label>Geary Run Number</label>
        <type>AutoNumber</type>
        <displayFormat>GR-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks Geary intake runs, receipts, and hashes.</description>
</CustomObject>