dig-src/main/default/objects/Geary_Run__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <type>Text</type>
    <length>80</length>
</CustomField>