dig-src/main/default/objects/Geary_Run__c/fields/Input_Hash__c.field-meta.xml
<CustomField>
    <fullName>Input_Hash__c</fullName>
    <label>Input Hash</label>
    <type>Text</type>
    <length>128</length>
</CustomField>