dig-src/main/default/objects/Geary_Run__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Text</type>
    <length>20</length>
</CustomField>