dig-src/main/default/objects/Geary_Run__c/fields/Output_Hash__c.field-meta.xml
<CustomField>
    <fullName>Output_Hash__c</fullName>
    <label>Output Hash</label>
    <type>Text</type>
    <length>128</length>
</CustomField>