dig-src/main/default/objects/Geary_Run__c/fields/Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Run_Id__c</fullName>
    <label>Run ID</label>
    <type>Text</type>
    <length>80</length>
</CustomField>